# Nursing_Robots_ROS2

./: README.md
Savvas_MPC/nav2_mpc_controller/: CMakeLists.txt  package.xml
Savvas_MPC/nav2_mpc_controller/Example/: example.yaml
Savvas_MPC/nav2_mpc_controller/include/nav2_mpc_controller/: mpc_controller.hpp
Savvas_MPC/nav2_mpc_controller/src/: mpc_controller.cpp
path_planner_server/config/: controller_sim.yaml  planner_sim.yaml
simulation_pkg/: CMakeLists.txt  package.xml  setup.py
simulation_pkg/config/: robot_controllers.yaml
simulation_pkg/description/: lidar.xacro  robot_core.xacro  robot_urdf.xacro
simulation_pkg/launch/: gaz_sim_launch.py
simulation_pkg/src/: odom_fixer.cpp  scan_fixer.cpp
