<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulation_pkg</name>
  <version>1.0.0</version>
  <description>Package to simulate my final year thesis robot using Gazebo and ROS2 Control</description>
  <author email="aapost04@ucy.ac.cy">Apostolos Apostolou</author>
  <maintainer email="aapost04@ucy.ac.cy">Apostolos Apostolou</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools (needed for mixed Python + C++) -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- C++ node dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

